Colaboratory를 통해 생성됨

--- a/Statistics/0_statistics_intro.ipynb
+++ b/Statistics/0_statistics_intro.ipynb
@@ -78,7 +78,7 @@
       },
       "source": [
         "import pandas as pd\n",
-        "df=pd.read_csv('http://wolfpack.hnu.ac.kr/Big_Data/data/MLB1871_2018/Salaries.csv')"
+        "df=pd.read_csv('http://wolfpack.hnu.ac.kr/big_data/data/MLB1871_2018/Salaries.csv')"
       ],
       "execution_count": null,
       "outputs": []
@@ -90,6 +90,17 @@
       },
       "source": [
         "df.shape"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vp8kyeLKdDSx"
+      },
+      "source": [
+        "df"
       ],
       "execution_count": null,
       "outputs": []
@@ -121,7 +132,7 @@
         "id": "wxDJ3UzoKH3g"
       },
       "source": [
-        "*선수연봉* 2018년 subset"
+        "*선수연봉* 2016년 subset"
       ]
     },
     {
@@ -130,8 +141,29 @@
         "id": "2X1uG8WRu-O2"
       },
       "source": [
-        "df18=df[(df['yearID']==2016) & (df['salary']>0)] #연봉 0 초과 선수만 활용\n",
-        "df18.head(3)"
+        "df16=df[(df['yearID']==2016) & (df['salary']>0)] #연봉 0 초과 선수만 활용\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U4hcIWwUgAE9"
+      },
+      "source": [
+        "df16.shape"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3ZMwRyJDfoZI"
+      },
+      "source": [
+        "df16.head(3)"
       ],
       "execution_count": null,
       "outputs": []
@@ -143,7 +175,7 @@
       },
       "source": [
         "import plotly.express as px\n",
-        "fig = px.scatter(df18, x=\"salary\", y=\"playerID\", color=\"lgID\",title=\"Player Salary with lgID\")\n",
+        "fig = px.scatter(df16, x=\"salary\", y=\"playerID\", color=\"lgID\",title=\"Player Salary with lgID\")\n",
         "fig.show()"
       ],
       "execution_count": null,
@@ -168,7 +200,7 @@
       "source": [
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
-        "sns.kdeplot(df18.salary).set_title('Kernel of 2018 Salary')\n",
+        "sns.kdeplot(df16.salary).set_title('Kernel of 2016 Salary')\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -180,7 +212,7 @@
         "id": "woxJUd8Fwtek"
       },
       "source": [
-        "sns.distplot(df18.salary).set_title('Histogram of 2018 Salary')\n",
+        "sns.histplot(df16.salary).set_title('Histogram of 2016 Salary')\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -192,8 +224,19 @@
         "id": "9cxvz7gbxkKY"
       },
       "source": [
-        "sns.boxplot(x=\"salary\",data =df18).set_title('Boxplot of 2018 Salary')\n",
+        "sns.boxplot(x=\"salary\",data =df16).set_title('Boxplot of 2016 Salary')\n",
         "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NwMJusRVfVSx"
+      },
+      "source": [
+        "df16.shape"
       ],
       "execution_count": null,
       "outputs": []
@@ -248,7 +291,7 @@
         "id": "eZopD6W-LVaI"
       },
       "source": [
-        "df_sample=df18['salary'].sample(n=50, random_state=123) #seed=109"
+        "df_sample=df16['salary'].sample(n=500, random_state=123) #seed=109"
       ],
       "execution_count": null,
       "outputs": []
@@ -259,7 +302,7 @@
         "id": "Cl43sslHMZC3"
       },
       "source": [
-        "sns.boxplot(df_sample).set_title('Boxplot of 2018 Salary : train=sample')\n",
+        "sns.boxplot(df_sample).set_title('Boxplot of 2016 Salary : train=sample')\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -282,7 +325,7 @@
       "source": [
         "xbar=[]\n",
         "for k in range(0,100):\n",
-        "  xbar.append(df18['salary'].sample(n=50).mean())"
+        "  xbar.append(df16['salary'].sample(n=50).mean())"
       ],
       "execution_count": null,
       "outputs": []
@@ -293,7 +336,7 @@
         "id": "H7I1uDKkVD5H"
       },
       "source": [
-        "sns.boxplot(xbar).set_title('Boxplot of 2018 Salary : sample-mean')\n",
+        "sns.boxplot(xbar).set_title('Boxplot of 2016 Salary : sample-mean')\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -306,7 +349,7 @@
       },
       "source": [
         "##모집단 추론\n",
-        "2018년 MLB 선수들의 연봉이 40만불 이상인가?"
+        "2016년 MLB 선수들의 연봉이 40만불 이상인가?"
       ]
     },
     {
@@ -316,7 +359,7 @@
       },
       "source": [
         "pd.options.display.float_format = '{:.2f}'.format\n",
-        "print('Population mean %.1f' % df18['salary'].mean()) #모잡단 연봉"
+        "print('Population mean %.1f' % df16['salary'].mean()) #모잡단 연봉"
       ],
       "execution_count": null,
       "outputs": []
