Colaboratory를 통해 생성됨

--- a/Statistics/1_statistics.ipynb
+++ b/Statistics/1_statistics.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMbdBO+h7KQc68c9+DqTewY",
+      "authorship_tag": "ABX9TyNrHx6fDzi8vrLOBN4ntgEN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,10 +40,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "RZ999WpHiADj",
-        "outputId": "38d4a159-4522-477d-e494-17dfbb201596",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "38d4a159-4522-477d-e494-17dfbb201596"
       },
       "source": [
         "import numpy as np\n",
@@ -144,6 +144,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xyRzAgIoqI3k"
+      },
+      "source": [
+        "P-Value란 관찰된 데이터의 검정통계량이 귀무가설을 지지하는 정도를 확률로 표현한 것이라 할 수 있다. 즉, P-Value는 귀무가설이 옳다는 가정하에 얻어진 검정통계량보다 더 극단적인 결과가 나올 확률이다. 따라서 P-Value가 작을수록 귀무가설을 지지하는 정도가 약하므로 귀무가설을 기각하게 되며, P-Value가 클수록 귀무가설을 지지하는 정도가 커짐으로 귀무가설을 채택하게 된다."
+      ]
     },
     {
       "cell_type": "code",
