Colaboratory를 통해 생성됨

--- a/Model/0_rf-PCA_Mutate-2.ipynb
+++ b/Model/0_rf-PCA_Mutate-2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "09-17.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPn06mpKt5ypjuIrZO6Lk+j",
+      "authorship_tag": "ABX9TyMEHa42gd+b5to/+OwD1qAb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -296,7 +296,7 @@
       "source": [
         "df_X_dim_Pay_Score = pd.DataFrame(X_dim, columns=['Pay_AVR'])"
       ],
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -319,7 +319,7 @@
         "# transform the data\n",
         "X_dim = trans.fit_transform(X_Bill_Amount)"
       ],
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -330,7 +330,7 @@
       "source": [
         "df_X_dim_Bill_Amount = pd.DataFrame(X_dim, columns=['Bill_AVR'])"
       ],
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -353,7 +353,7 @@
         "# transform the data\n",
         "X_dim = trans.fit_transform(X_Pay_Amount)"
       ],
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -364,7 +364,7 @@
       "source": [
         "df_X_dim_Pay_Amount = pd.DataFrame(X_dim, columns=['P_AMT_AVR'])"
       ],
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -417,7 +417,7 @@
       "source": [
         "df['Bill_Amount_AVR'] = (df['BILL_AMT1']+df['BILL_AMT2']+df['BILL_AMT3']+df['BILL_AMT4']+df['BILL_AMT5']+df['BILL_AMT6'])/6"
       ],
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -439,7 +439,7 @@
       "source": [
         "df['Credit_Util'] = (df['Bill_Amount_AVR'] / df['LIMIT_BAL'])*100"
       ],
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -463,6 +463,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EvVz0voWvgZX"
+      },
+      "source": [
+        "Mutate Variable 2 : Bill to Pay Rate"
+      ]
     },
     {
       "cell_type": "code",
@@ -494,7 +503,7 @@
       "source": [
         "df['Pay_Rate'] = (df_Pay_Amount.mean(axis=1) / df_Bill_Amount.mean(axis=1)).round(2)"
       ],
-      "execution_count": 36,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -503,7 +512,51 @@
         "id": "kVoq7nJIFOmo"
       },
       "source": [
-        "df['Pay_Rate']"
+        "df['Pay_Rate'].describe()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lPfzE8ZasqKR"
+      },
+      "source": [
+        "#df.loc[df['Pay_Rate'] == 0]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "chyjnWz2s6-d"
+      },
+      "source": [
+        "#df['Pay_Rate'].replace(0, 5)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Hn8_YkvruMbg"
+      },
+      "source": [
+        "#df['Pay_Rate'].describe()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1_fssMuKuS3I"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -527,7 +580,7 @@
       "source": [
         "df['Pay_Sum'] = df_Pay_Amount.sum(axis=1)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -549,7 +602,7 @@
       "source": [
         "df['Billed_Sum'] = df['BILL_AMT1']+df['BILL_AMT2']+df['BILL_AMT3']+df['BILL_AMT4']+df['BILL_AMT5']+df['BILL_AMT6']"
       ],
-      "execution_count": 48,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -560,7 +613,7 @@
       "source": [
         "df['Billed_Sum'] = df_Bill_Amount.sum(axis=1)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -579,15 +632,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Zp9m8oBLHqSD",
-        "outputId": "af2a68d7-73cd-4a6a-b246-c49ffd0967a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5a6006c0-1eb5-4fce-8ea7-86bd9eac61e9"
       },
       "source": [
         " 0 in df['Billed_Sum'].values"
       ],
-      "execution_count": 55,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -597,34 +650,49 @@
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 33
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wKE_7wQIH2Mu"
-      },
-      "source": [
-        "df['Billed_Sum'].isin([0]).any()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gP9SLauvIlY-",
-        "outputId": "74f8dd87-ab5c-4472-b4ec-1f1706124db0",
+        "id": "wKE_7wQIH2Mu",
+        "outputId": "fad8076f-6c9b-48a1-d22e-e7cd8b3d7a78",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
+        "df['Billed_Sum'].isin([0]).any()"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gP9SLauvIlY-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4ab8fd46-d885-457c-f4d5-16fa0af83703"
+      },
+      "source": [
         "(df['Billed_Sum'] == 0).sum()"
       ],
-      "execution_count": 60,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -634,31 +702,80 @@
             ]
           },
           "metadata": {},
-          "execution_count": 60
+          "execution_count": 38
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jv0Lnf_UJF_s"
+        "id": "jv0Lnf_UJF_s",
+        "outputId": "41df21c4-d7a6-4387-a527-2f8d941c37f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "df['Billed_Sum'].replace(0, 1)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0          7704.0\n",
+              "1         17077.0\n",
+              "2        101653.0\n",
+              "3        231334.0\n",
+              "4        109339.0\n",
+              "           ...   \n",
+              "29995    725349.0\n",
+              "29996     21182.0\n",
+              "29997     70496.0\n",
+              "29998    266611.0\n",
+              "29999    230874.0\n",
+              "Name: Billed_Sum, Length: 30000, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AyBi6hbHGInE"
+        "id": "AyBi6hbHGInE",
+        "outputId": "2c8805d4-dde2-4d10-968a-5644965c2de0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "df['Billed_Sum']"
+        "df['Billed_Sum'].describe()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "count    3.000000e+04\n",
+              "mean     2.698617e+05\n",
+              "std      3.795643e+05\n",
+              "min     -3.362590e+05\n",
+              "25%      2.868800e+04\n",
+              "50%      1.263110e+05\n",
+              "75%      3.426265e+05\n",
+              "max      5.263883e+06\n",
+              "Name: Billed_Sum, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -668,42 +785,19 @@
       "source": [
         "df['Pay_Rate'] = ((df['Pay_Sum'] / df['Billed_Sum'])).round(2)"
       ],
-      "execution_count": 50,
+      "execution_count": 42,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ao62qt1y_sl7",
-        "outputId": "b1312056-e585-43cb-fa39-d1f0bf6f1203",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Ao62qt1y_sl7"
       },
       "source": [
         "df['Pay_Rate'].describe()"
       ],
-      "execution_count": 54,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "count    29205.00\n",
-              "mean          inf\n",
-              "std           NaN\n",
-              "min       -546.93\n",
-              "25%          0.04\n",
-              "50%          0.09\n",
-              "75%          0.62\n",
-              "max           inf\n",
-              "Name: Pay_Rate, dtype: float64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 54
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -713,7 +807,7 @@
       "source": [
         ""
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -753,7 +847,7 @@
       "source": [
         "df = pd.concat([df, df_X_dim_Pay_Score, df_X_dim_Bill_Amount, df_X_dim_Pay_Amount ], axis=1)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -768,7 +862,7 @@
       "source": [
         "df.columns"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -807,7 +901,7 @@
       "source": [
         ""
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -829,7 +923,7 @@
       "source": [
         "X = df.drop(['ID','PAY_0','PAY_2', 'PAY_3', 'PAY_4', 'PAY_5', 'PAY_6','BILL_AMT1', 'BILL_AMT2','BILL_AMT3', 'BILL_AMT4', 'BILL_AMT5', 'BILL_AMT6', 'PAY_AMT1','PAY_AMT2', 'PAY_AMT3', 'PAY_AMT4', 'PAY_AMT5', 'PAY_AMT6', 'Bill_Amount_AVR','Pay_Sum','Billed_Sum', 'default.payment.next.month'], axis =1).values"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -844,7 +938,7 @@
       "source": [
         "X.shape"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -877,7 +971,7 @@
       "source": [
         "y = df['default.payment.next.month'].values"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -897,7 +991,7 @@
       "source": [
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -908,7 +1002,7 @@
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.7, random_state=42, shuffle=True)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -928,7 +1022,7 @@
       "source": [
         "from sklearn.ensemble import RandomForestClassifier"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -968,7 +1062,7 @@
       "source": [
         "rf = RandomForestClassifier(n_estimators=200, criterion='entropy', max_features='log2', max_depth=15)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -984,7 +1078,7 @@
       "source": [
         "rf.fit(X_train, y_train)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
