Colaboratory를 통해 생성됨

--- a/Model/09_23_RF.ipynb
+++ b/Model/09_23_RF.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "09-17.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMEb9ae4jSenBLnMKTeD7Uu",
+      "authorship_tag": "ABX9TyOojlfTDPEMSammtyiSpNqP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
       "source": [
         "#df.corr(method='spearman')"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.ensemble import RandomForestClassifier"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
       "source": [
         "X = df.drop(['ID', 'default.payment.next.month'], axis=1).values"
       ],
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
       "source": [
         "Y = df['default.payment.next.month'].values"
       ],
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -144,9 +144,9 @@
         "id": "odZ7T-ThGc_z"
       },
       "source": [
-        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.7, random_state=42)"
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.3, random_state=42)"
       ],
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -157,41 +157,19 @@
       "source": [
         "model = RandomForestClassifier()"
       ],
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JeQLrrFsHYxK",
-        "outputId": "f04ae945-3435-4bfa-87f1-d67182f43872"
+        "id": "JeQLrrFsHYxK"
       },
       "source": [
         "model.fit(X_train, Y_train)"
       ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "RandomForestClassifier(bootstrap=True, ccp_alpha=0.0, class_weight=None,\n",
-              "                       criterion='gini', max_depth=None, max_features='auto',\n",
-              "                       max_leaf_nodes=None, max_samples=None,\n",
-              "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
-              "                       min_samples_leaf=1, min_samples_split=2,\n",
-              "                       min_weight_fraction_leaf=0.0, n_estimators=100,\n",
-              "                       n_jobs=None, oob_score=False, random_state=None,\n",
-              "                       verbose=0, warm_start=False)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -201,7 +179,7 @@
       "source": [
         "y_predict = model.predict(X_test)"
       ],
-      "execution_count": 11,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -212,7 +190,7 @@
       "source": [
         "from sklearn.metrics import recall_score"
       ],
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -222,18 +200,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iPqroYAXI4c6",
-        "outputId": "e70ebdae-2c56-405b-db13-3d2da5864bc0"
+        "outputId": "60cac2f7-1b91-41fd-ef99-2eba322ba6b9"
       },
       "source": [
         "print(\"Recall score:\"+ str(recall_score(Y_test, y_predict)))"
       ],
-      "execution_count": 13,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Recall score:0.34783554492060037\n"
+            "Recall score:0.35714285714285715\n"
           ]
         }
       ]
@@ -242,15 +220,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Pu7QZ_btSIa9",
-        "outputId": "b36747ba-af1d-4b16-cc89-bcaea4b1e19c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fb7c8b87-e6a0-4f60-da4f-bc69f5baafb3"
       },
       "source": [
         "X_train.shape[1]"
       ],
-      "execution_count": 14,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -260,7 +238,60 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GRvd9wE4YsKF"
+      },
+      "source": [
+        "import sklearn.metrics as metrics"
+      ],
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1pPw4gqLYrVV",
+        "outputId": "c182a144-8a09-4ca0-b7c3-c781f7f664ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print('accuracy', metrics.accuracy_score(Y_test,y_predict) )\n",
+        "print('precision', metrics.precision_score(Y_test,y_predict) )\n",
+        "print('recall', metrics.recall_score(Y_test,y_predict) )\n",
+        "print('f1', metrics.f1_score(Y_test,y_predict) )\n",
+        "print(metrics.classification_report(Y_test,y_predict))\n",
+        "print(metrics.confusion_matrix(Y_test,y_predict))"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "accuracy 0.8123333333333334\n",
+            "precision 0.6200177147918512\n",
+            "recall 0.35714285714285715\n",
+            "f1 0.45322110715441893\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.84      0.94      0.89      7040\n",
+            "           1       0.62      0.36      0.45      1960\n",
+            "\n",
+            "    accuracy                           0.81      9000\n",
+            "   macro avg       0.73      0.65      0.67      9000\n",
+            "weighted avg       0.79      0.81      0.79      9000\n",
+            "\n",
+            "[[6611  429]\n",
+            " [1260  700]]\n"
+          ]
         }
       ]
     }
